test/files/pos/t12740b/Y_1.scala

package object Y {
  type NSE = java.util.NoSuchElementException
}
