test/files/neg/t2458b/q.scala

package q {
  object `package` {
    type CC = qq.CC
  }
  package qq {
    class CC
  }
}
